# traicer

./: .gitignore  AGENTS.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.bumpy/: _config.json  add-project-scoped-capture.md  cache-read-without-storage.md  cloudflare-state-store-retry.md  docs-acceptance-evidence-links.md  docs-first-time-reader-accuracy.md  fix-alchemy-effect-compatibility.md  fix-wrangler-path-discovery.md  initial-cli.md  owner-trace-access.md  resume-storage-deployment.md  robust-offline-r2-init.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: bumpy-check.yml  ci.yml  desktop-release.yml  docs-sync-notify.yml  release.yml
apps/cli/: CHANGELOG.md  README.md  package.json  tsconfig.json
apps/cli/scripts/: build.ts
apps/cli/src/: cloudflare.ts  config.ts  daemon-locator.ts  explorer.tsx  harness.ts  index.ts  lifecycle.ts  local-owner-access.ts  (+4 more)
apps/daemon/: package.json  tsconfig.json
apps/desktop/: CHANGELOG.md  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  CLI.md  CLIENT_CONFIGURATION.md  DESKTOP.md  GETTING_STARTED.md  README.md  RELEASING.md  ROADMAP.md  STORAGE.md  TELEMETRY.md  THREAT_MODEL.md  TROUBLESHOOTING.md
docs/adr/: 0001-process-boundary.md  0001-tauri-bun-sidecar.md
tooling/typescript-config/: base.json  package.json
(+30 files in other folders)
