[package]
name = "traicer"
version = "0.0.0"
description = "Seller-operated Traice capture toolbar"
edition = "2021"

[lib]
name = "traicer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
hex = "0.4"
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
rcgen = "0.13"
